# genos-migration

./: .gitignore  pyproject.toml
docs/: GenOS_95_Percent_Migration_Strategy.md  GenOS_Migration_Scope.md  GenOS_Project_Master_Plan.md
docs/10woongi/: 10woongi-migration.md
docs/3eyes/: 3eyes-migration.md  3eyes_Binary_Format_Specification.md  3eyes_Parser_Implementation_Notes.md
docs/audit/: 10woongi.md  3eyes.md  99hunter.md  README.md  gap-analysis.md  muhan13.md  murim.md  simoon.md  tbamud.md  universal-data-model.md
docs/circlemud/: Migration_Cookbook_CircleMUD.md  Parser_Implementation_Notes.md  tbaMUD_File_Format_Specification.md  tbaMUD_to_GenOS_Data_Mapping.md
docs/common/: Architecture_Guide.md  Migration_Cookbook.md  UIR_Schema_Reference.md
docs/engine/: GenOS_ANSI_Format_Reference.md  GenOS_Engine_Architecture.md  GenOS_Unified_DB_Schema.md
docs/simoon/: simoon-migration.md
examples/tbamud-output/lua/: classes.lua  combat.lua  triggers.lua
examples/tbamud-output/sql/: schema.sql
schema/: uir.schema.json
src/genos/: __init__.py  cli.py
src/genos.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/genos/adapters/: __init__.py  base.py  detector.py
src/genos/compiler/: __init__.py  compiler.py  db_generator.py  korean_nlp_generator.py  (+1 more)
tests/: test_adapter.py  test_compiler.py  test_config_parser.py  test_korean_nlp.py  test_mob_parser.py  test_obj_parser.py  test_phase2.py  test_shp_parser.py  test_simoon_adapter.py  test_threeeyes_adapter.py  test_trg_parser.py  test_uir_schema.py  test_wld_parser.py  test_zon_parser.py
(+62 files in other folders)
